# Simplon_MLOPS

./: .buildinfo  .dockerignore  .env.local  .gitignore  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  Dockerfile  README.md  app.db  docker-compose.prod.yml  docker-compose.yml  exersice.md  exersice_2.md  genindex.html  index.html  main.py  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: CODE_OF_CONDUCT.doctree  CONTRIBUTING.doctree  environment.pickle  index.doctree
.github/: python-ci.yml
.github/workflows/: cd.yml  ci.yml  python-ci.yml
_downloads/9879d6db96fd29134fc802214163b95a/: LICENSE
app/: __init__.py  app.py  base.py  main.py
app/modules/: __init__.py  modules.py  my_math.py
app_api/: Dockerfile  create_db.py  main.py  pyproject.toml
app_api/models/: __init__.py  models.py
app_api/modules/: __init__.py  connect.py  crud.py
app_front/: .dockerignore  Dockerfile  main.py
app_front/pages/: 0_insert.py  1_read.py  __init__.py
docs/: modules.rst
docs/source/: CODE_OF_CONDUCT.md  api.rst  conf.py  index.rst  modules.rst
tests/: test_api.py  test_front.py  test_front_math.py  test_main.py  test_my_math.py
